# Psychometricist-AI

./: .env.example  .gitignore  .pre-commit-config.yaml  .railwayignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  Procfile  README.md  ROADMAP.md  conftest.py  pyproject.toml  railway.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement.md
.github/workflows/: ci.yml
data/: ipip_extraversion.json
data/sessions/: .gitkeep  test-e2e-001_20260207_212419.json  test-e2e-001_20260207_212438.json
src/: llm.py  logging_config.py  main.py  paths.py  settings.py  workflow.py
src/agents/: interviewer.py  scorer.py
src/evaluation/: compare.py  self_report.py
src/extraction/: __init__.py  features.py  word_lists.py
src/graph/: graph_client.py  local_graph.py  neo4j_client.py  seed.py
src/models/: initial_state.py  state.py
src/scoring/: __init__.py  embedding_scorer.py  ensemble.py  feature_scorer.py  llm_scorer.py
src/session/: __init__.py  logger.py
tests/: test_e2e_mock.py  test_embedding_scorer.py  test_evaluation.py  test_features.py  test_graph_client.py  test_llm_scorer.py  test_scoring.py  test_settings.py  test_smoke.py  test_web_api.py  test_workflow.py
web/: __init__.py  app.py
web/static/: index.html
