[project]
name = "ai-psychometricist"
version = "0.1.0"
description = "Multi-agent conversational psychometric assessment system"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.4,<1.0",
    "langchain-openai>=0.3,<1.0",
    "langchain-core>=0.3,<1.0",
    "neo4j>=5.0,<6.0",
    "pydantic>=2.0,<3.0",
    "python-dotenv>=1.0,<2.0",
    "scipy>=1.14,<2.0",
    "numpy>=1.26,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
interview = "src.main:main"
self-report = "src.evaluation.self_report:main"
compare = "src.evaluation.compare:main"
seed-graph = "src.graph.seed:main"
